--- a/gw_dmft_docu.tex
+++ b/gw_dmft_docu.tex
@@ -3884,6 +3884,30 @@ So we get
 \end{align}
 So what does it mean?
 
+\subsection{effective Selfenergy from Hybridization}
+For $U=2$ the hybridization that reproduces the exact Selfenergy is given by
+\begin{align}
+ \Sigma_{loc}(\omega)
+ &= \frac{U}{2} + c_{loc}\left( \frac{1}{\omega+i\delta-3t} +  \frac{1}{\omega+i\delta+3t} \right) \\
+ \Sigma_{inter}(\omega)
+ &= c_{inter}\left( \frac{1}{\omega+i\delta-3t} -  \frac{1}{\omega+i\delta+3t} \right) 
+\end{align}
+Then the hybridization is given as
+\begin{align}
+ \Delta(\omega) &= \omega_{\mu} - \mathcal{G}^{-1}_0(\omega)  \\
+ &= \frac{ (t-\Sigma_{inter})^2 }{\omega_{\mu}-\Sigma_{loc}} \\
+ %
+ &= \frac{ \left( t - \frac{c_{inter}}{\omega_{\delta}-3t} +  \frac{c_{inter}}{\omega_{\delta}+3t} \right)^2 }
+           {\omega_{\delta}- \frac{c_{loc}}{\omega_{\delta}-3t} -  \frac{c_{loc}}{\omega_{\delta}+3t} } \\
+\end{align}
+
+
+% \begin{align}
+%  \Delta(\omega)
+%  &= \frac{1-2*c_{c}-2*c_{nc}}{\omega+i\delta}
+%     \frac{c_{nc}}{\omega+i\delta-}
+% \end{align}
+
 
 \subsection{Numerical apporach for 2d Hubbard model}
 When we have a (nearly) exact solution of a model system  from QMC,
