--- a/gw_dmft_docu.tex
+++ b/gw_dmft_docu.tex
@@ -3888,22 +3888,49 @@ So what does it mean?
 For $U=2$ the hybridization that reproduces the exact Selfenergy is given by
 \begin{align}
  \Sigma_{loc}(\omega)
- &= \frac{U}{2} + \frac{U}{8}\left( \frac{1}{\omega+i\delta-3t} +  \frac{1}{\omega+i\delta+3t} \right) \\
- &= \frac{U}{2} + \frac{U}{4} \frac{\omega_{\delta} }{ \omega^2_{\delta} -(3t)^2}  \\
+ &= \frac{U}{2} + \frac{U^2}{8}\left( \frac{1}{\omega+i\delta-3t} +  \frac{1}{\omega+i\delta+3t} \right) \nonumber\\
+ &= \frac{U}{2} + \frac{U^2}{4} \frac{\omega_{\delta} }{ \omega^2_{\delta} -(3t)^2}  \\
  %
  \Sigma_{inter}(\omega)
- &= \frac{U}{8} \left( \frac{1}{\omega+i\delta-3t} -  \frac{1}{\omega+i\delta+3t} \right)  \\
-    &= \frac{U}{4} \frac{ 3t }{ \omega^2_{\delta} -(3t)^2}.
+ &= \frac{U^2}{8} \left( \frac{1}{\omega+i\delta-3t} -  \frac{1}{\omega+i\delta+3t} \right)  \nonumber\\
+    &= \frac{U^2}{4} \frac{ 3t }{ \omega^2_{\delta} -(3t)^2}.
 \end{align}
 Then the hybridization is given as
 \begin{align}
- \Delta(\omega) &= \omega_{\mu} - \mathcal{G}^{-1}_0(\omega)  \\
- &= \frac{ (t-\Sigma_{inter})^2 }{\omega_{\mu}-\Sigma_{loc}} \\
+ \Delta(\omega) &= \omega_{\mu} - \mathcal{G}^{-1}_0(\omega)  
+ = \frac{ (t-\Sigma_{inter})^2 }{\omega_{\mu}-\Sigma_{loc}} \nonumber\\
  %
- &= \frac{ \left( t - \frac{U}{4} \frac{ 3t }{ \omega^2_{\delta} -(3t)^2} \right)^2 }
-           {\omega_{\delta}- \frac{U}{4} \frac{\omega_{\delta} }{ \omega^2_{\delta} -(3t)^2} } \\
-&= \frac{ t^2 -\frac{U}{2} \frac{ 3t^2 }{ \omega^2_{\delta} -(3t)^2}  + \frac{U^2}{16} \frac{ 9t^2 }{ ( \omega^2_{\delta} -(3t)^2 )^2 }  }
-           {\omega_{\delta}- \frac{U}{4} \frac{  \omega_{\delta} }{  \omega^2_{\delta} -(3t)^2  }  } 
+ &= \frac{ \left( t - \frac{U^2}{4} \frac{ 3t }{ \omega^2_{\delta} -(3t)^2} \right)^2 }
+           {\omega_{\delta}- \frac{U^2}{4} \frac{\omega_{\delta} }{ \omega^2_{\delta} -(3t)^2} } \nonumber\\
+&= \frac{ t^2 -\frac{U^2}{2} \frac{ 3t^2 }{ \omega^2_{\delta} -(3t)^2}  + \frac{U^4}{16} \frac{ 9t^2 }{ ( \omega^2_{\delta} -(3t)^2 )^2 }  }
+           {\omega_{\delta}- \frac{U^2}{4} \frac{  \omega_{\delta} }{  \omega^2_{\delta} -(3t)^2  }  } \nonumber\\
+%
+&= t^2 \frac{ (\omega^2_{\delta} -9t^2) - 3 \frac{U^2}{2}    + \frac{U^4}{16} \frac{ 9 }{ \omega^2_{\delta} -9t^2  }  }
+           {\omega_{\delta} \left( \omega^2_{\delta} -9t^2 - U^2/4  \right)  } \nonumber\\
+%
+&= \frac{ t^2 }{\omega_{\delta} \left( \omega^2_{\delta} -9t^2 - U^2/4  \right)  }
+\left( 
+\underbrace{  \omega^2_{\delta} -9t^2  -3U^2/2  }_{causal}
+ +\underbrace{ \frac{ 9 U^4 /16 }{ \omega^2_{\delta} -9t^2   }  }_{noncausal}  \right) .
+\end{align}
+This hybridization has five major peaks
+\begin{align}
+ \underline{\omega \rightarrow 0:} &&  
+  \Delta(\omega) &\rightarrow \frac{1}{\omega_{\delta}}
+                 \left( 
+                 \frac{ 9t^4 + 3U^2t^2/2 + U^4/16}{9t^2 + U^2/4}
+                 \right) > 0
+\end{align}
+\begin{align}
+ \underline{\omega \rightarrow \pm \sqrt{9t^2 + U^2/4}:} &&  
+  \Delta(\omega) &\rightarrow \frac{\pm1}{ \omega^2_{\delta} -9t^2 - U^2/4}
+                \left( \frac{ U^2 t^2}{\sqrt{9t^2 + U^2/4} } \right) > 0
+\end{align}
+\begin{align}
+ \underline{\omega \rightarrow \pm 3t:} &&  
+  \Delta(\omega) 
+  &\rightarrow 
+    \frac{ \pm1 }{ \omega^2_{\delta} -9t^2   } \left( - 3 U^2 t /4  \right)  < 0
 \end{align}
 
 
