worked on noncausal hyb

--- a/gw_dmft_docu.tex
+++ b/gw_dmft_docu.tex
@@ -3939,9 +3939,10 @@ This hybridization has five major peaks
 %  &= \frac{1-2*c_{c}-2*c_{nc}}{\omega+i\delta}
 %     \frac{c_{nc}}{\omega+i\delta-}
 % \end{align}
+Try to generate $\Delta$ with noncausal peaks at $\omega=\pm 2U$? instead of $\omega=\pm3t$.
+Maybe this generates the exact Green's function!
 
-
-\subsection{Numerical apporach for 2d Hubbard model}
+\subsection{Numerical approach for the 2d Hubbard model}
 When we have a (nearly) exact solution of a model system  from QMC,
 we can use that one to find the right bath that generates the exact
 impurity Selfenergy that equals the exact local Selfenergy.
