general DMFT equation for nonlocal Selfenergies added Chp 14.3 CORRECTION

--- a/gw_dmft_docu.tex
+++ b/gw_dmft_docu.tex
@@ -4032,11 +4032,11 @@ G^{-1} &=
 \left[ \unity (i\omega + \mu ) -
  \begin{pmatrix}
      0 & -t \\ -t & 0
- \end{pmatrix}^{-1}
+ \end{pmatrix}
  -
  \begin{pmatrix}
      \Sigma_{00} & \Sigma_{01} \\ \Sigma_{10} & \Sigma_{11}
- \end{pmatrix}^{-1}
+ \end{pmatrix}
  \right]^{-1} \\
 %
 \Rightarrow G &= 
