--- a/gw_dmft_docu.tex
+++ b/gw_dmft_docu.tex
@@ -4007,7 +4007,7 @@ In the derivation of the DMFT equations using the cavity construction one can sh
 effective action of the Hubbard model after integrating out all sites except one becomes identical
 to the action of an impurity model with the Weiss field
 \begin{align}
- \mathcal{G}^{-1} = i\omega + \mu - \sum_{ij\neq 0} t_{i0} G^{(0)}_{ij} t_{j0},
+ \mathcal{G}^{-1} = i\omega + \mu_{loc} - \sum_{ij\neq 0} t_{0i} G^{(0)}_{ij} t_{j0},
 \end{align}
 where $G^{(0)}_{ij}$ is the Green's function of the Hubbard model with site $0$ removed, and
 $t_{i0}$ are the hopping amplitudes from site $i$ to the site $0$.
@@ -4018,11 +4018,11 @@ For a general lattice the relation between the cavity $G^{(0)}$ and the full lat
 \end{align*}
 so the effective Weiss field takes the form
 \begin{align}
- \mathcal{G}^{-1} = i\omega + \mu - \sum_{ij\neq 0} t_{i0} t_{j0} \left( G_{ij} - \frac{G_{i0} G_{0j} }{G_{00}} \right).
+ \mathcal{G}^{-1} = i\omega + \mu_{loc} - \sum_{ij\neq 0} t_{0i}  \left( G_{ij} - \frac{G_{i0} G_{0j} }{G_{00}} \right) t_{j0} .
 \end{align}
 This equation can be simplified assuming a local Selfenergy to obtain an effective Dyson equation
 \begin{align}
- \mathcal{G}^{-1} &= i\omega + \mu - \sum_{ij\neq 0} t_{i0} t_{j0} \left( G_{ij} - \frac{G_{i0} G_{0j} }{G_{00}} \right) \label{eq:eff_dyson_for_bath} \\
+ \mathcal{G}^{-1} &= i\omega + \mu_{loc} -  \sum_{ij\neq 0} t_{0i}  \left( G_{ij} - \frac{G_{i0} G_{0j} }{G_{00}} \right) t_{j0} \label{eq:eff_dyson_for_bath} \\
  &= (G_{00})^{-1} + \Sigma.
 \end{align}
 If we now assume a nonlocal Selfenergy, this derivation is in general no longer possible.
@@ -4048,10 +4048,10 @@ G^{-1} &=
 where we have used that $\Sigma_{00} = \Sigma_{11}$ and $\Sigma_{01} = \Sigma_{10}$.
 Inserting this Green's function into the equation for the Weiss field from above we get
 \begin{align}
- \mathcal{G}^{-1} &= i\omega + \mu -  t_{01} t_{10} \left( G_{11} - \frac{G_{10} G_{01} }{G_{00}} \right) \\
- &= i\omega + \mu -  \frac{t^2}{(i\omega + \mu-\Sigma_{00})^{2} -(t-\Sigma_{01})^2 } 
+ \mathcal{G}^{-1} &= i\omega + \mu_{loc} -  t_{01} t_{10} \left( G_{11} - \frac{G_{10} G_{01} }{G_{00}} \right) \\
+ &= i\omega + \mu_{loc} -  \frac{t^2}{(i\omega + \mu-\Sigma_{00})^{2} -(t-\Sigma_{01})^2 } 
                  \left( i\omega + \mu-\Sigma_{00} - \frac{ (-t+\Sigma_{01})^2 }{i\omega + \mu-\Sigma_{00}} \right) \\
-&= i\omega + \mu -  \frac{t^2}{i\omega + \mu-\Sigma_{00} } .
+&= i\omega + \mu_{loc} -  \frac{t^2}{i\omega + \mu-\Sigma_{00} } .
 \end{align}
 We see that the nonlocal Selfenergy $\Sigma_{01}$ drops out of the equation and does not enter the bath. 
 Here the bath is completely causal and actually takes the same form as in standard DMFT where the Selfenergy is purely local.
@@ -4075,6 +4075,59 @@ for the two baths above. It is evident that the general form of the bath is a mu
 to the exact solution than the bath from the Dyson equation.
 
 \includegraphics[width=1.0\textwidth]{figs/reversebath/dimerbath/bath_general_dyson_U2.pdf}
+
+
+\subsubsection{1D Hubbard and Fock Selfenergy example}
+Here we consider a 1-dimensional Hubbard model with NN-Hopping $t=1$. We generate the bath 
+and hybridization function for the generalized scheme and from the Dyson equation 
+and compare the results. Since the generalized scheme and the Dyson equation
+are identical for local Selfenergies, we add here a Fock-like term as the nonlocal
+Selfenergy of the form ,
+\begin{align}
+ \Sigma(k) &= -0.5 \cos(k)
+\end{align}
+which widens the noninteracting bandwidth.
+
+The resulting bath and hybridization are shown in this plot:
+
+\includegraphics[width=0.47\textwidth]{figs/bathNonlocFromDMFTderiv/1dhub_bath_sigk.pdf}
+\includegraphics[width=0.47\textwidth]{figs/bathNonlocFromDMFTderiv/1dhub_hyb_sigk.pdf}
+
+We see that the Dyson equation obtains a much larger bandwidth with increased hybridization 
+at the Fermi level, indicating a less correlated system.
+The general scheme on the other hand also increases the bandwidth slightly, but
+shows a reduced hybridization at the Fermilevel, which in general indicates a stronger correlated system.
+
+If we solve these impurity models one-shot with just one solver iteration, this 
+suspicion is confirmed. The Fock term leads to an increase in local correlations,
+but the Dyson equation incorrectly predicts exactly the opposite, namely weaker local correlations.
+
+\includegraphics[width=0.75\textwidth]{figs/bathNonlocFromDMFTderiv/1dhub_simp.pdf}
+
+
+\subsubsection{2D Hubbard model example}
+Here we consider the 2-dimensional Hubbard model for $t=1$, $20\%$ hole-doping $n=0.8$ 
+and $U=4$, which is in the weakly correlated metallic regime. 
+For the nonlocal Selfenergies we use perturbation theory and calculate all diagrams
+up to second order, which in this regime is quite a good approximation,
+compared to (basically exact) diagrammatic Monte Carlo results.
+
+Then we perform a 2nd+DMFT calculation where the nonlocal Selfenergies are included in the DMFT cycle
+for the general scheme and the Dyson method, as well as zero-frequency approximations to
+the Selfenergy. The resulting impurity or local Selfenergy is shown in this plot:
+
+\includegraphics[width=0.47\textwidth]{figs/bathNonlocFromDMFTderiv/Sigma_2DHubbard_real.pdf}
+\includegraphics[width=0.47\textwidth]{figs/bathNonlocFromDMFTderiv/Sigma_2DHubbard_imag.pdf}
+
+We clearly see that the full 2nd+DMFT scheme is the clostest to the exact diagrammatic Monte Carlo
+results. The second best result for the real part is the 2nd(w=0)+DMFT scheme, where we have approximated the 
+nonlocal Selfenergy by their $w=0$ value. But interestingly the imaginary part is slightly too small,
+indicating this methods leads to an underestimation of the correlation strength, i.e. likely at high energies, but 
+gives a good representation at the Fermi level, since the real part of the Selfenergy is well reproduced.
+The Dyson equation shows completely the opposite trend, regardless of using the frequency dependent
+nonlocal Selfenergy or its $w=0$ value. Also here the Dyson equation leads to an underestimation
+of the correlation strength.
+
 
 
 \subsection{Reverse engineering the bath for the dimer}
